@@ -1,0 +1,39 @@
+$:render.header(_('About'))
+<div class="panel" style="text-align:left">
+<h2>Version</h2>
+<pre>$version </pre>
+<h2>Links</h2>
+<ul>
+    <li><a href="http://deluge-torrent.org">Deluge</a></li>
+    <li><a href="http://forum.deluge-torrent.org/viewtopic.php?f=9&t=425">
+        WebUi forum Thread</a>
+    </li>
+    <li><a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.html">GPL v2
+    </a></li>
+</ul>
+
+<h2>Authors</h2>
+<ul>
+<h3>WebUi</h3>
+<ul>
+    <li>Martijn Voncken</li>
+</ul>
+<h3>Template</h3>
+<ul>
+    <li>Martijn Voncken</li>
+    <li>somedude</li>
+</ul>
+<h3>Deluge</h3>
+<ul>
+    <li>Zach Tibbitts</li>
+    <li>Alon Zakai</li>
+    <li>Alon Zakai</li>
+    <li>Marcos Pinto</li>
+    <li>Andrew Resch</li>
+    <li>Alex Dedul</li>
+</ul>
+</ul>
+*and all other authors/helpers/contributors I forgot to mention.
+</div>
+
+$:render.footer()
