@@ -1,15 +1,13 @@
 $def with (title)
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
     <title>Deluge:$title</title>
     <link rel="icon" href="/static/images/deluge_icon.gif" type="image/gif" />
     <link rel="shortcut icon" href="/static/images/deluge_icon.gif" type="image/gif" />
 <link rel="stylesheet" type="text/css" href="/static/simple_site_style.css" />
 
 </head>
+
 <body>
 <div id="page">
 
