@@ -54,5 +54,4 @@ $:render.part_button('POST', '/resume_all', _('Resume all'), 'tango/media-playba
 
 $:render.part_refresh()
 
-
 $:render.footer()
