@@ -1,13 +1,13 @@
+$def with (error)
 $:render.header(_('Login'))
 <div class="panel">
+$if error > 0:
+    <div class="error">$_("Password is invalid,try again")</div>
+
 <form method="POST" id="loginform" action='/login'>
 <div id="loginpanel">
     <div class="form_row">
-	<span class="form_label">$_('User')</span>
-	<input type="text" name="user" id="user" class="form_input">
-    </div>
-    <div class="form_row">
-	<span class="form_label">$_('Pass')</span>
+	<span class="form_label">$_('Password')</span>
 	<input type="password" name="pwd" id="pwd" class="form_input">
     </div>
     <div class="form_row">
@@ -15,6 +15,9 @@ $:render.header(_('Login'))
 	<input type="submit" name="submit"
 	id="submit" value="Submit" class="form_input">
     </div>
+
+    <br />
+    <a href="/about">$_('About')</a>
 </div>
 </form>
 </div>
