@@ -1,5 +1,5 @@
-<div class="panel">
-<div id='refresh'>
+<div id='refresh_panel'>
+<div class="panel" >
 $_('Auto refresh:')
 $if get_config('auto_refresh'):
     ($(get_config('refresh')) $_('seconds')) &nbsp;
