@@ -3,7 +3,7 @@ $:render.header(_('Set Timeout'))
 <form action="/refresh/set" method="POST">
     $_('Refresh page every:')
     <input type="text" name="refresh" value="$get_config('refresh')" size="3">
-    $_('Seconds')
+    $_('seconds')
     <input type="submit" value="$_('Set')">
 </form>
 </div>
