@@ -1,5 +1,1 @@
-revision-id: mvoncken@gmail.com-20070923193628-omqar5yaxatdmfu0
-date: 2007-09-23 21:36:28 +0200
-build-date: 2007-09-23 21:54:09 +0200
-revno: 30
-branch-nick: WebUi
+48
